# blackbird

./: .gitignore  .gitmodules  .travis.yml  CHANGELOG.md  CMakeLists.txt  Dockerfile  LICENSE  Makefile  README.md  bitcoin.cpp  bitcoin.h  bitfinex.cpp  bitfinex.h  bitstamp.cpp  blackbird  blackbird.code-workspace  blackbird.conf  blackbird.db-journal  check_entry_exit.cpp  check_entry_exit.h  config.json  curl-ca-bundle.crt  curl_fun.cpp  curl_fun.h  debug.sh  docker-compose.debug.yml  docker-compose.yml  kraken.cpp  kraken.h  main.cpp  okcoin.cpp  okcoin.h  parameters.cpp  parameters.h  result.cpp  result.h  send_email.cpp  start_blackbird.sh  stop_after_exit  testerbird.db
src/: .cproject  base64.h  bitcoin.cpp  bitcoin.h  bitfinex.cpp  bitfinex.h  bitstamp.cpp  bitstamp.h  btce.cpp  btce.h  check_entry_exit.cpp  check_entry_exit.h  curl_fun.cpp  curl_fun.h  db_fun.cpp  db_fun.h  gemini.cpp  gemini.h  getpid.h  hex_str.hpp  itbit.cpp  itbit.h  kraken.cpp  kraken.h  main.cpp  okcoin.cpp  okcoin.h  parameters.cpp  parameters.h  poloniex.cpp  poloniex.h  quote_t.h  result.cpp  result.h  send_email.cpp  send_email.h  sevenninetysix.cpp  sevennintysix.cpp  sevennintysix.cpp~  sevennintysix.h  (+5 more)
src/exchange/: bitfinex.cpp  bitfinex.h  bitstamp.cpp  bitstamp.h  btce.cpp  btce.h  gdax.cpp  gemini.cpp  gemini.h  itbit.cpp  itbit.h  kraken.cpp  kraken.h  okcoin.cpp  okcoin.h  poloniex.cpp  poloniex.h  sevenninetysix.cpp  sevenninetysix.h
src/exchanges/: binance.cpp  binance.h  bitfinex.cpp  bitfinex.h  bitstamp.cpp  bitstamp.h  bittrex.cpp  bittrex.h  btce.cpp  btce.h  cexio.cpp  cexio.h  exmo.cpp  exmo.h  gdax.cpp  gdax.h  gemini.cpp  gemini.h  itbit.cpp  itbit.h  kraken.cpp  kraken.h  okcoin.cpp  okcoin.h  poloniex.cpp  poloniex.h  quadrigacx.cpp  quadrigacx.h  wex.cpp  wex.h
src/utils/: base64.cpp  hmac_sha512.hpp  restapi.cpp  restapi.h  send_email.cpp  send_email.h
